--- a/light.html
+++ b/light.html
@@ -1,102 +1,64 @@
-<!DOCTYPE html>
+# meiqdad633.github.io
+# Meiqdad Hassanni's Portfolio
 
-<html>
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Meiqdad Hassanni</h1>
-        <p id="position">Front-end Developer</p>
-    </header>
+This repository contains HTML and CSS code for Meiqdad Hassanni's personal portfolio webpage. The webpage provides information about Meiqdad's background, skills, experiences, and contact details.
 
-    <section class="summary">
-        <section class="theme">
-            <a href="../Dark/dark.html">Dark mode</a>
-        </section>
-        <h2 >Summary</h2>
-        <p class="sumtext">
-            <img src="pic.jpg" width="120px" alt="profile photo not loaded" class="profile">
-            Fresh junior Front-end developer
-        </p>
-    </section>
-    <section>
-        <h2>Experience</h2>
-        <ul id="experience">
-            <li>
-                <b>IT Specialist - Bahiran Network Services</b> | 2021 - 2023
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Education</h2>
-        <ul id="education">
-            <li>
-                <b>High School Diploma - Shahid Hazari High school </b> | Graduation: December 2019
-            </li>
-            <li>
-                <b>Meta Front-end Development - Coursera</b> | Graduation: October 2023
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Skills</h2>
-        <table id="skills">
-            <tr>
-                <th>Skill</th>
-                <th>Level</th>
-            </tr>
-            <tr>
-                <td>HTML</td>
-                <td>Advance</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>Advance</td>
-            </tr>
-            <tr>
-                <td>JS</td>
-                <td>Intermediate</td>
-            </tr>
-            <tr>
-                <td>React.js</td>
-                <td>Intermediate</td>
-            </tr>
-        </table>
-    </section>
-    <footer>
-        <h2>Contacts</h2>
-        <table id="contacts">
-            <tr>
-                <td>Mail</td>
-                <td>: meiqdadhassani12@gmail.com</td>
-            </tr>
-            <tr>
-                <td>WhatsApp</td>
-                <td>: +989010228637</td>
-            </tr>
-            <tr>
-                <td>Phone</td>
-                <td>: +989010228637</td>
-            </tr>
-        </table>
-        <h2>Social</h2>
-        <ul id="contacts">
-            <li><a href="https://www.linkedin.com/in/meiqdad-hassani633/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/Meiqdad633" target="_blank">Github</a></li>
-            <li><a href="https://www.sololearn.com/profile/9794853" target="_blank">Sololearn</a></li>
-        </ul>
+## Table of Contents
 
-        <section>
-            <h2>Ask me!</h2>
-            <form id="contact-form">
-                <label for="name">Name: </label><input placeholder="Name" id="name" type="text" /><br>
-                <label for="email">Email: </label><input placeholder="Email" id="email" type="email" /><br>
-                <textarea placeholder="Message"></textarea><br>
-                <input type="submit" value="SEND">
-            </form>
-        </section>
-        <p id="copyright">Copyright &copy; Meiqdad Hassani</p>
-    </footer>
-</body>
-</html>
+- [HTML Structure](#html-structure)
+- [CSS Styles](#css-styles)
+- [Usage](#usage)
+- [Contributing](#contributing)
+- [License](#license)
+
+## HTML Structure
+
+### Header
+- `h1` displays the name.
+- `p` with the ID `position` indicates the position.
+
+### Summary Section
+- Contains a link for a "Dark Mode" toggle.
+- `h2` marks the start of the summary.
+- `p` with the class `sumtext` displays the introductory text and an image.
+
+### Experience Section
+- `h2` marks the start of the experience section.
+- An unordered list (`ul`) with the ID `experience` lists experiences. Each list item (`li`) contains experience details.
+
+### Education Section
+- `h2` marks the start of the education section.
+- An unordered list (`ul`) with the ID `education` lists educational qualifications. Each list item (`li`) contains education details.
+
+### Skills Section
+- `h2` marks the start of the skills section.
+- A table with the ID `skills` displays a tabular representation of skills.
+
+### Footer
+- Contains contact details, links to social profiles, and a "Contact Form" section.
+- The "Contact Form" includes fields for name, email, and a message, along with a "SEND" button.
+
+## CSS Styles
+
+- Defines the overall styling for the webpage.
+- Specifies font families, sizes, margins, borders, background colors, and text alignments for various HTML elements.
+- Defines specific styling for the header, list items, links, tables, input fields, and more.
+
+## Usage
+
+1. Clone this repository to your local machine.
+
+2. Open the `index.html` file in a web browser to view the portfolio webpage.
+
+3. Explore different sections to learn more about Meiqdad Hassanni.
+
+4. Use the contact form to send messages or inquiries.
+
+## Contributing
+
+Contributions to this repository are generally not accepted since it represents a personal portfolio. However, feel free to fork the repository and adapt the code to create your own portfolio.
+
+## License
+
+This project is licensed under the [MIT License](LICENSE). You can use and modify the code as per the license terms.
+
